# action-promote

./: .gitignore  DEVELOPMENT.md  Dockerfile  README.md  RELEASE.md  action.yml  commit-and-pull-request.sh  pyproject.toml  update-image-tag.sh  update-images.py  update_images.py
.github/config/: yamllint.yaml
.github/workflows/: container-build.yaml  linting.yml  static-analysis.yaml  static-analysis.yml  test.yaml  test.yml
example/: complex-promotion.json  cross-overlay-promotion.json  helm-cross-overlay-promotion.json  helm-promotion.json  invalid-promotion.json  simple-promotion.json
src/: commit-and-pull-request.sh  download-and-checksum.sh  entrypoint.sh  promote.py  pyproject.toml  requirements.txt  validate.py
src/git-helper/: pyproject.toml
src/kustomize-wrapper/: pyproject.toml
src/promote/: __init__.py  validate.py
src/tests/: charts_test.py  find_duplicates_test.py  images_test.py  promote_test.py  update_images_test.py  validate_images_test.py
src/tests/promotion-configs/: duplicate-promotion-newName.json
src/validate/: find_duplicates_test.py  validate.py  validate_images_test.py
tests/: update_images_test.py
tests/promotion-configs/: duplicate-promotion-name.json  invalid-promotion.json
