[tool.poetry]
name = "kustomize-promote"
version = "0.1.0"
description = ""
authors = ["Brandon High <highb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
