[tool.poetry]
name = "kustomize-promote"
version = "0.1.0"
description = "A tool for promoting Kustomize configurations"
authors = ["Brandon High <highb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
PyYAML = "^6.0"
loguru = "^0.7.0"
types-pyyaml = "^6.0.12.12"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^6.2.4"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
