[tool.poetry]
name = "git-helper"
version = "0.1.0"
description = ""
authors = ["Brandon High <highb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "^0.17.21"
click = "^8.1.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
